--- a/ArgumentativeRelationClassificationPipeline/.gitignore
+++ b/ArgumentativeRelationClassificationPipeline/.gitignore
@@ -1,3 +1,5 @@
+ArgumenText_accessData.json
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm
 
